--- a/src/views/error.ejs
+++ b/src/views/error.ejs
@@ -1,7 +1,5 @@
 <%- include('partials/header') -%>
 
-<h1 class="text-4xl">
-  💣 <%= error.status || "ERROR" %>: <%= message || "Error" %>
-</h1>
+<h1 class="text-4xl">💣 <%= error.status || "ERROR" %>: <%= message || "Error" %></h1>
 
 <%- include('partials/footer') -%>
